deployments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-bookstack-router
  namespace: dev

spec:
  rules:
    - host: bookstack.dev.internal.roadmap-ai.tech
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name:  bookstack-app
                port:
                  number: 8000
